FixThegaps

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,15 @@ body,html {
   height: 100%;
 }
 
+h1 {
+  font-size: 20px;
+  letter-spacing: 10px;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
 .content {
+  line-height: 1;
   position: relative;
   background-color: #070c10;
   min-height: 500px;
@@ -26,10 +34,10 @@ body,html {
   font-family: "Arial";
   line-height: 40px;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   margin: auto;
   text-align: center;
-  padding-top: 200px;
+  padding-top: 100px;
 }
 
 .content p {
@@ -138,7 +146,6 @@ body,html {
 .front-cover {
   margin-top: 18.5%;
   width: 100%;
-  height: 100%;
   background: #070c10;
 }
 
@@ -148,4 +155,12 @@ body,html {
   width: 100%;
   background-color: transparent;
   opacity: 0.5;
+}
+
+.clearfix:after {
+   content: " "; /* Older browser do not support empty content */
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
 }
